tests/neg/parse_error1.scala
class Main {
  val x: Int = format(

  def main = {
    0
  }
}